[package]
name = "vaporise"
version = "0.2.1"
edition = "2021"
authors = ["Muhammad Nauman Raza <devraza@skiff.com>"]
description = "A simple, featureful and blazingly fast memory-safe alternative to 'rm' written in Rust."
readme = "README.md"
license = "MIT"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"

[[bin]]
name = "vpr"
path = "src/main.rs"
