[package]
name = "vaporise"
version = "0.5.0"
edition = "2021"
authors = ["Muhammad Nauman Raza <devraza.hazard643@slmail.me>"]
description = "A simple, featureful and fast alternative to 'rm' written in Rust."
readme = "README.md"
license = "MPL-2.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
owo-colors = "4.0.0"

[[bin]]
name = "vpr"
path = "src/main.rs"
